[gd_scene load_steps=19 format=3 uid="uid://dyvdow6av111h"]

[ext_resource type="Script" uid="uid://baxvnwdvnpgg2" path="res://scripts/levels/level_manager.gd" id="1_um320"]
[ext_resource type="Texture2D" uid="uid://d0wrt7h11f6dt" path="res://assets/pathfinder/[light ver] background pathfinder.png" id="2_rej77"]
[ext_resource type="Texture2D" uid="uid://bv41rrm6mm4cm" path="res://assets/pathfinder/6x4.png" id="3_5vn0v"]
[ext_resource type="PackedScene" uid="uid://dydvid1pmnxda" path="res://scenes/player.tscn" id="4_ts8eg"]
[ext_resource type="PackedScene" uid="uid://c4ex86jm8iqhf" path="res://scenes/end_point.tscn" id="5_ts8eg"]
[ext_resource type="PackedScene" uid="uid://dkl832t6r4y02" path="res://scenes/pathfinder/pathfinder_ui.tscn" id="5_um320"]
[ext_resource type="PackedScene" uid="uid://dl5eaflytfva7" path="res://scenes/pathfinder/memory_bubble.tscn" id="6_5vn0v"]
[ext_resource type="PackedScene" uid="uid://dwm2p8kl6kfh4" path="res://scenes/pathfinder/rotation_plate.tscn" id="7_ts8eg"]
[ext_resource type="Texture2D" uid="uid://dbikgub4qm47v" path="res://assets/pathfinder/wall 1.png" id="8_ts8eg"]
[ext_resource type="Script" uid="uid://io0p0pg5n4f" path="res://scripts/tutorial.gd" id="10_fcb7b"]
[ext_resource type="AudioStream" uid="uid://3gntrqphe801" path="res://assets/audio/bgm/BGM_Level.mp3" id="10_glw47"]
[ext_resource type="Texture2D" uid="uid://2hj4e1ulx75s" path="res://assets/tutorial/tutorial 1.png" id="11_ov8fk"]
[ext_resource type="Texture2D" uid="uid://erfwmus0cwil" path="res://assets/tutorial/next button.png" id="12_pmra4"]
[ext_resource type="Texture2D" uid="uid://vq3mdsost731" path="res://assets/tutorial/next button-clicked.png" id="13_1bx01"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q0wsq"]
size = Vector2(8.582284, 148.22763)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_posk4"]
size = Vector2(565, 3)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_anwe6"]
size = Vector2(3, 283)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sjq8i"]
size = Vector2(3.25, 378.75)

[node name="Level4" type="Node2D"]
script = ExtResource("1_um320")
next_level = "day_5"
current_level = "level_5"

[node name="Background" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -576.0
offset_top = -324.0
offset_right = 1344.0
offset_bottom = 756.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5999933, 0.5999943)
texture = ExtResource("2_rej77")
metadata/_edit_use_anchors_ = true

[node name="Grid" type="Sprite2D" parent="."]
position = Vector2(-11.99995, -34.000004)
scale = Vector2(0.6, 0.59999996)
texture = ExtResource("3_5vn0v")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Collision" type="StaticBody2D" parent="."]

[node name="Wall" type="CollisionShape2D" parent="Collision"]
position = Vector2(236.375, 55)
scale = Vector2(10.792581, 0.6274135)
shape = SubResource("RectangleShape2D_q0wsq")

[node name="Wall2" type="CollisionShape2D" parent="Collision"]
position = Vector2(-232.3125, -133.5)
scale = Vector2(10.792581, 0.6274135)
shape = SubResource("RectangleShape2D_q0wsq")

[node name="Walls" type="StaticBody2D" parent="."]

[node name="wall" type="CollisionShape2D" parent="Walls"]
position = Vector2(1.5, 102.5)
shape = SubResource("RectangleShape2D_posk4")

[node name="wall2" type="CollisionShape2D" parent="Walls"]
position = Vector2(0.5, -276.75)
shape = SubResource("RectangleShape2D_posk4")

[node name="wall3" type="CollisionShape2D" parent="Walls"]
position = Vector2(285.5, -38.5)
shape = SubResource("RectangleShape2D_anwe6")

[node name="wall4" type="CollisionShape2D" parent="Walls"]
position = Vector2(-282.625, -87)
shape = SubResource("RectangleShape2D_sjq8i")

[node name="MemoryBubble" parent="." instance=ExtResource("6_5vn0v")]
position = Vector2(-177, -173)
scale = Vector2(0.35, 0.35)

[node name="RotationPlate2" parent="." instance=ExtResource("7_ts8eg")]
position = Vector2(-142, -227)

[node name="RotationPlate" parent="." instance=ExtResource("7_ts8eg")]
position = Vector2(140, -134)

[node name="EndPoint" parent="." instance=ExtResource("5_ts8eg")]
position = Vector2(283.99994, -221.99997)
rotation = 1.5650645
scale = Vector2(2.2, 2.2)

[node name="WallImage" type="Sprite2D" parent="."]
position = Vector2(-233.47499, -133.50002)
scale = Vector2(0.6045, 0.598)
texture = ExtResource("8_ts8eg")

[node name="WallImage2" type="Sprite2D" parent="."]
position = Vector2(237.00002, 54.000004)
scale = Vector2(0.6045, 0.598)
texture = ExtResource("8_ts8eg")

[node name="Player" parent="." instance=ExtResource("4_ts8eg")]
position = Vector2(-46, 57)
scale = Vector2(0.520168, 0.538477)
max_input = 3

[node name="PathfinderUI" parent="." instance=ExtResource("5_um320")]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 3

[node name="Tutorial" type="Panel" parent="CanvasLayer"]
offset_right = 1154.0
offset_bottom = 648.0
script = ExtResource("10_fcb7b")
max_input = 1
current_txt = 5
set_label_visible = false

[node name="Bubble" type="TextureRect" parent="CanvasLayer/Tutorial"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -315.0
offset_top = -257.0
offset_right = 315.0
offset_bottom = 243.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("11_ov8fk")

[node name="NextButton" type="TextureButton" parent="CanvasLayer/Tutorial"]
layout_mode = 0
offset_left = 732.0
offset_top = 504.0
offset_right = 1168.0
offset_bottom = 863.0
scale = Vector2(0.2, 0.2)
texture_normal = ExtResource("12_pmra4")
texture_pressed = ExtResource("13_1bx01")

[node name="BackButton" type="TextureButton" parent="CanvasLayer/Tutorial"]
layout_mode = 0
offset_left = 386.00003
offset_top = 505.0
offset_right = 822.0
offset_bottom = 864.0
scale = Vector2(0.2, 0.2)
texture_normal = ExtResource("12_pmra4")
texture_pressed = ExtResource("13_1bx01")
flip_h = true

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/Tutorial"]
layout_mode = 0
offset_left = 374.0
offset_top = 333.0
offset_right = 827.0
offset_bottom = 428.0
theme_override_colors/default_color = Color(0.11764706, 0.10980392, 0.23529412, 0.78431374)
theme_override_font_sizes/normal_font_size = 22
text = "Plat konversi akan memutar arah kakek 90Â° dari arah masuk. Arah putaran akan mulai dengan searah jarum jam dan semua plat konversi memiliki arah putaran yang sama. Saat kakek melewati salah satu, arah semua plat akan berubah dari searah jarum jam ke berlawanan jarum jam, dan sebaliknya."
horizontal_alignment = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_glw47")
volume_db = -32.0
autoplay = true
bus = &"Music"

[connection signal="pressed" from="CanvasLayer/Tutorial/NextButton" to="CanvasLayer/Tutorial" method="_on_next_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Tutorial/BackButton" to="CanvasLayer/Tutorial" method="_on_back_button_pressed"]
